--- a/RainOrShine/FutureWeatherDayView.xib
+++ b/RainOrShine/FutureWeatherDayView.xib
@@ -48,17 +48,17 @@
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="qDz-rr-Ksr"/>
                         </constraints>
-                        <fontDescription key="fontDescription" style="UICTFontTextStyleCaption2"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="10"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ymR-cc-zp8">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="fg" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ymR-cc-zp8">
                         <rect key="frame" x="3" y="82" width="43" height="63"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="43" id="Cza-DD-h2f"/>
                             <constraint firstAttribute="height" constant="63" id="f5A-6R-F8V"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="9"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
