--- a/RainOrShine/FutureWeatherView.xib
+++ b/RainOrShine/FutureWeatherView.xib
@@ -17,77 +17,77 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="256" height="149"/>
+            <rect key="frame" x="0.0" y="0.0" width="272" height="161"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hLv-gV-Tst" customClass="FutureWeatherDayView" customModule="RainOrShine" customModuleProvider="target">
-                    <rect key="frame" x="0.0" y="0.0" width="48" height="149"/>
+                    <rect key="frame" x="0.0" y="0.0" width="52" height="161"/>
                     <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="s4Q-sj-HXE">
-                        <rect key="frame" x="0.0" y="0.0" width="48" height="149"/>
+                        <rect key="frame" x="0.0" y="0.0" width="52" height="161"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     </view>
                     <constraints>
-                        <constraint firstAttribute="width" constant="48" id="Q5S-SS-0mZ"/>
+                        <constraint firstAttribute="width" constant="52" id="tVP-79-7Fe"/>
                     </constraints>
                     <blurEffect style="dark"/>
                 </visualEffectView>
-                <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cnd-LG-7nP" customClass="FutureWeatherDayView" customModule="RainOrShine" customModuleProvider="target">
-                    <rect key="frame" x="104" y="0.0" width="48" height="149"/>
-                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="J8B-ff-Mhr">
-                        <rect key="frame" x="0.0" y="0.0" width="48" height="149"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                    </view>
-                    <blurEffect style="dark"/>
-                </visualEffectView>
                 <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b19-Wk-mM1" customClass="FutureWeatherDayView" customModule="RainOrShine" customModuleProvider="target">
-                    <rect key="frame" x="208" y="0.0" width="48" height="149"/>
+                    <rect key="frame" x="220" y="0.0" width="52" height="161"/>
                     <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="QjB-5p-gDq">
-                        <rect key="frame" x="0.0" y="0.0" width="48" height="149"/>
+                        <rect key="frame" x="0.0" y="0.0" width="52" height="161"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     </view>
                     <blurEffect style="dark"/>
                 </visualEffectView>
                 <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GCC-j1-V2X" customClass="FutureWeatherDayView" customModule="RainOrShine" customModuleProvider="target">
-                    <rect key="frame" x="156" y="0.0" width="48" height="149"/>
+                    <rect key="frame" x="165" y="0.0" width="52" height="161"/>
                     <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="9Ak-YF-kFX">
-                        <rect key="frame" x="0.0" y="0.0" width="48" height="149"/>
+                        <rect key="frame" x="0.0" y="0.0" width="52" height="161"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     </view>
                     <constraints>
-                        <constraint firstAttribute="width" constant="48" id="baV-Di-BIb"/>
+                        <constraint firstAttribute="width" constant="52" id="A9c-jR-fDN"/>
                     </constraints>
                     <blurEffect style="dark"/>
                 </visualEffectView>
                 <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6QQ-Ee-zOc" customClass="FutureWeatherDayView" customModule="RainOrShine" customModuleProvider="target">
-                    <rect key="frame" x="52" y="0.0" width="48" height="149"/>
+                    <rect key="frame" x="55" y="0.0" width="52" height="161"/>
                     <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="bgr-lE-fw0">
-                        <rect key="frame" x="0.0" y="0.0" width="48" height="149"/>
+                        <rect key="frame" x="0.0" y="0.0" width="52" height="161"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     </view>
                     <constraints>
-                        <constraint firstAttribute="width" constant="48" id="PdO-yG-vHx"/>
+                        <constraint firstAttribute="width" constant="52" id="75c-d7-JHX"/>
                     </constraints>
+                    <blurEffect style="dark"/>
+                </visualEffectView>
+                <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cnd-LG-7nP" customClass="FutureWeatherDayView" customModule="RainOrShine" customModuleProvider="target">
+                    <rect key="frame" x="110" y="0.0" width="52" height="161"/>
+                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="J8B-ff-Mhr">
+                        <rect key="frame" x="0.0" y="0.0" width="52" height="161"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    </view>
                     <blurEffect style="dark"/>
                 </visualEffectView>
             </subviews>
             <constraints>
-                <constraint firstItem="Cnd-LG-7nP" firstAttribute="leading" secondItem="6QQ-Ee-zOc" secondAttribute="trailing" constant="4" id="2b2-Rj-2KL"/>
-                <constraint firstAttribute="bottom" secondItem="hLv-gV-Tst" secondAttribute="bottom" id="6at-tw-YyM"/>
-                <constraint firstItem="GCC-j1-V2X" firstAttribute="top" secondItem="b19-Wk-mM1" secondAttribute="top" id="6en-Tw-o3C"/>
-                <constraint firstItem="Cnd-LG-7nP" firstAttribute="bottom" secondItem="GCC-j1-V2X" secondAttribute="bottom" id="76z-y9-8SC"/>
-                <constraint firstItem="hLv-gV-Tst" firstAttribute="bottom" secondItem="6QQ-Ee-zOc" secondAttribute="bottom" id="APq-aJ-GX8"/>
-                <constraint firstAttribute="trailing" secondItem="b19-Wk-mM1" secondAttribute="trailing" id="DjA-Tt-zrE"/>
-                <constraint firstItem="Cnd-LG-7nP" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Rk9-sW-0hf"/>
-                <constraint firstItem="6QQ-Ee-zOc" firstAttribute="top" secondItem="Cnd-LG-7nP" secondAttribute="top" id="Vcs-t6-bK7"/>
-                <constraint firstItem="6QQ-Ee-zOc" firstAttribute="bottom" secondItem="Cnd-LG-7nP" secondAttribute="bottom" id="Vzs-Pf-ndO"/>
-                <constraint firstItem="GCC-j1-V2X" firstAttribute="leading" secondItem="Cnd-LG-7nP" secondAttribute="trailing" constant="4" id="XK8-Gp-t8C"/>
-                <constraint firstItem="6QQ-Ee-zOc" firstAttribute="leading" secondItem="hLv-gV-Tst" secondAttribute="trailing" constant="4" id="ac0-zf-9ty"/>
-                <constraint firstItem="Cnd-LG-7nP" firstAttribute="top" secondItem="GCC-j1-V2X" secondAttribute="top" id="dDA-bV-eat"/>
-                <constraint firstItem="GCC-j1-V2X" firstAttribute="bottom" secondItem="b19-Wk-mM1" secondAttribute="bottom" id="lzO-F7-x6k"/>
-                <constraint firstItem="b19-Wk-mM1" firstAttribute="leading" secondItem="GCC-j1-V2X" secondAttribute="trailing" constant="4" id="pLS-4m-buF"/>
-                <constraint firstItem="hLv-gV-Tst" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="pM9-bW-QTw"/>
-                <constraint firstItem="hLv-gV-Tst" firstAttribute="top" secondItem="6QQ-Ee-zOc" secondAttribute="top" id="vG1-G9-M9B"/>
-                <constraint firstItem="hLv-gV-Tst" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="wiM-Qw-9Zf"/>
+                <constraint firstItem="Cnd-LG-7nP" firstAttribute="leading" secondItem="6QQ-Ee-zOc" secondAttribute="trailing" constant="3" id="3Yp-Wk-lfj"/>
+                <constraint firstItem="Cnd-LG-7nP" firstAttribute="bottom" secondItem="GCC-j1-V2X" secondAttribute="bottom" id="6Hv-nt-fRY"/>
+                <constraint firstItem="b19-Wk-mM1" firstAttribute="leading" secondItem="GCC-j1-V2X" secondAttribute="trailing" constant="3" id="6Qz-a7-Zvc"/>
+                <constraint firstItem="Cnd-LG-7nP" firstAttribute="top" secondItem="GCC-j1-V2X" secondAttribute="top" id="FVM-2k-556"/>
+                <constraint firstItem="GCC-j1-V2X" firstAttribute="leading" secondItem="Cnd-LG-7nP" secondAttribute="trailing" constant="3" id="K1S-fl-0KJ"/>
+                <constraint firstAttribute="trailing" secondItem="b19-Wk-mM1" secondAttribute="trailing" id="PWl-DA-y4z"/>
+                <constraint firstItem="Cnd-LG-7nP" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="RgO-1c-kab"/>
+                <constraint firstItem="6QQ-Ee-zOc" firstAttribute="top" secondItem="Cnd-LG-7nP" secondAttribute="top" id="T3l-3M-4bf"/>
+                <constraint firstItem="6QQ-Ee-zOc" firstAttribute="bottom" secondItem="Cnd-LG-7nP" secondAttribute="bottom" id="Vc8-lZ-L0F"/>
+                <constraint firstItem="hLv-gV-Tst" firstAttribute="bottom" secondItem="6QQ-Ee-zOc" secondAttribute="bottom" id="XGR-Zn-zuN"/>
+                <constraint firstItem="hLv-gV-Tst" firstAttribute="top" secondItem="6QQ-Ee-zOc" secondAttribute="top" id="d5M-nx-qRy"/>
+                <constraint firstItem="hLv-gV-Tst" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="gcl-jW-2Ih"/>
+                <constraint firstItem="6QQ-Ee-zOc" firstAttribute="leading" secondItem="hLv-gV-Tst" secondAttribute="trailing" constant="3" id="hye-bS-oLB"/>
+                <constraint firstItem="GCC-j1-V2X" firstAttribute="top" secondItem="b19-Wk-mM1" secondAttribute="top" id="kCI-mA-TcP"/>
+                <constraint firstItem="GCC-j1-V2X" firstAttribute="bottom" secondItem="b19-Wk-mM1" secondAttribute="bottom" id="pq3-79-gmn"/>
+                <constraint firstAttribute="bottom" secondItem="hLv-gV-Tst" secondAttribute="bottom" id="qIu-0B-jGO"/>
+                <constraint firstItem="hLv-gV-Tst" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="wLt-9X-dl2"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
