--- a/RainOrShine/LocationView.xib
+++ b/RainOrShine/LocationView.xib
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -24,26 +23,30 @@
                 <rect key="frame" x="0.0" y="0.0" width="144" height="102"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label f dsg" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pY0-gc-774">
-                        <rect key="frame" x="8" y="8" width="128" height="64.5"/>
-                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="pY0-gc-774">
+                        <rect key="frame" x="0.0" y="4" width="144" height="78"/>
+                        <string key="text">Label f dsg
+edfdsf</string>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PoweredByGoogle" translatesAutoresizingMaskIntoConstraints="NO" id="f7z-OX-Qnj">
-                        <rect key="frame" x="28" y="84" width="89" height="10"/>
+                        <rect key="frame" x="28" y="88" width="88" height="10"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="10" id="c2l-sD-pFN"/>
+                            <constraint firstAttribute="width" constant="88" id="0KV-Xr-JPx"/>
+                            <constraint firstAttribute="height" constant="10" id="kOL-6P-JyO"/>
                         </constraints>
                     </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="f7z-OX-Qnj" firstAttribute="bottom" secondItem="FPF-hb-eXH" secondAttribute="bottomMargin" id="Uvq-b7-px0"/>
-                    <constraint firstItem="pY0-gc-774" firstAttribute="centerX" secondItem="f7z-OX-Qnj" secondAttribute="centerX" id="XRz-x9-x6P"/>
-                    <constraint firstItem="pY0-gc-774" firstAttribute="leading" secondItem="FPF-hb-eXH" secondAttribute="leadingMargin" id="bfg-lh-WKD"/>
-                    <constraint firstItem="pY0-gc-774" firstAttribute="top" secondItem="FPF-hb-eXH" secondAttribute="topMargin" id="v3q-SE-t9z"/>
-                    <constraint firstItem="pY0-gc-774" firstAttribute="trailing" secondItem="FPF-hb-eXH" secondAttribute="trailingMargin" id="wlO-of-Nsj"/>
-                    <constraint firstItem="f7z-OX-Qnj" firstAttribute="leading" secondItem="FPF-hb-eXH" secondAttribute="leading" constant="28" id="zN9-e1-3Kk"/>
+                    <constraint firstItem="pY0-gc-774" firstAttribute="leading" secondItem="FPF-hb-eXH" secondAttribute="leading" id="5Dy-zQ-XHi"/>
+                    <constraint firstItem="pY0-gc-774" firstAttribute="top" secondItem="FPF-hb-eXH" secondAttribute="top" constant="4" id="EEA-m1-bK4"/>
+                    <constraint firstAttribute="bottom" secondItem="f7z-OX-Qnj" secondAttribute="bottom" constant="4" id="Qo2-Ai-B1F"/>
+                    <constraint firstAttribute="trailing" secondItem="pY0-gc-774" secondAttribute="trailing" id="WnA-At-fed"/>
+                    <constraint firstItem="f7z-OX-Qnj" firstAttribute="top" secondItem="pY0-gc-774" secondAttribute="bottom" constant="5" id="pyM-z1-97p"/>
+                    <constraint firstItem="pY0-gc-774" firstAttribute="centerX" secondItem="FPF-hb-eXH" secondAttribute="centerX" id="uVw-iT-sJ2"/>
+                    <constraint firstItem="f7z-OX-Qnj" firstAttribute="centerX" secondItem="FPF-hb-eXH" secondAttribute="centerX" id="yqD-2l-CAE"/>
                 </constraints>
             </view>
             <blurEffect style="light"/>
