Tapping anywhere but the toolbar and search bar now makes futureWeatherView appear and disappear... Fixed an issue where getPlaceIDOfGeneralLocale returns nil and crashes because general locale string was not formed due to no city, state, or country.

--- a/RainOrShine/PhotoDetailView.xib
+++ b/RainOrShine/PhotoDetailView.xib
@@ -34,7 +34,7 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="13" translatesAutoresizingMaskIntoConstraints="NO" id="FEk-lK-r9M">
+                    <pageControl opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="13" translatesAutoresizingMaskIntoConstraints="NO" id="FEk-lK-r9M">
                         <rect key="frame" x="8" y="21" width="224" height="37"/>
                         <color key="currentPageIndicatorTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </pageControl>
